--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <link
             rel="icon"
-            type="image/svg+xml"
-            href="https://cdn-icons-png.flaticon.com/512/864/864927.png" />
+            type="image/png"
+            href="/public/logo.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Energoaudit</title>
     </head>
